--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "bcrypt": "^5.0.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "postgres": "^1.0.2",
     "sequelize": "^6.3.5"
   },
