--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
@@ -21,7 +22,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "postgres": "^1.0.2",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
