--- a/package.json
+++ b/package.json
@@ -14,19 +14,16 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
-    "ejs": "^3.1.5",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "express-flash": "0.0.2",
-    "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
     "postgres": "^1.0.2",
     "sequelize": "^6.3.5",
     "validator": "^13.1.17"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
+    "jsdoc": "^3.6.6",
     "nodemon": "^2.0.4",
     "pg": "^8.3.3"
   }
